--- a/CoinMarketCap.ipynb
+++ b/CoinMarketCap.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Crytocurrency Data Exercise\n",
+    "# Cryptocurrency Data Exercise\n",
     "\n",
     "The first section of this notebook contains the script used to ingest data from the CoinMarketCap API and load it into BigQuery. Each step labeled with markdown text. The second section contains the SQL queries used to answer the questions in the exercise"
    ]
